2021-07-02  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/r/headers.h: Update notice as January 2022
	release will remove protection for STRICT_R_HEADERS making it default

2021-05-27  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/cpp/rcppversion.cpp (checkVersion): Allow for more
	than four components of a development version number
	* inst/tinytest/test_packageversion.R: Idem
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Clarify in comment

2021-05-13  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2021-05-09  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppCommon.h: Add cfloat header

2021-04-09  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/hash/IndexHash.h: Silence one comparison, update
	use of unsigned int to uint32_t throughout

2021-03-22  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2021-03-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/api/meat/message.h: Add wrapper for base::message
	* inst/include/Rcpp/api/meat/meat.h: Include new file
	* inst/tinytest/test_misc.R: Simple test
	* inst/tinytest/cpp/misc.cpp (messageWrapper): Test support

2021-02-23  Dirk Eddelbuettel  <edd@debian.org>

	* Contributing.md: Update unit test link to tinytest

2021-02-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Author): Add Inaki to the team

2021-02-01  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* README.md: Mention the Rcpp drap repo and its release candidates in
	installation section

2021-01-30  Iñaki Ucar  <iucar@fedoraproject.org>

	* inst/include/test_global_rostream.R: Added test new (optionally)
	global Rcout and Rcerr objects

2021-01-28  Iñaki Ucar  <iucar@fedoraproject.org>
