@@ -128,7 +128,7 @@
                   Allaire and Kevin Ushey and Qiang Kou and
                   Nathan Russel and John Chambers and Douglas Bates},
   year =	 2021,
-  note =	 {R package version 1.0.6},
+  note =	 {R package version 1.0.7},
   url =		 CRAN # "package=Rcpp"
 }
 
